--- a/package.json
+++ b/package.json
@@ -1,23 +1,19 @@
 {
-  "name": "phaser3-rollup-typescript",
+  "name": "all-lights-on",
   "version": "1.1.0",
-  "description": "Phaser 3 TypeScript Starter",
+  "description": "Electricity Game",
   "main": "dist/index.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/geocine/phaser3-rollup-typescript.git"
-  },
-  "author": "Aivan Monceller",
+  "author": "joscco",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/geocine/phaser3-rollup-typescript/issues"
   },
-  "homepage": "https://github.com/geocine/phaser3-rollup-typescript#readme",
+  "homepage": "https://joscco.github.io/AllLightsOn",
   "devDependencies": {
     "@types/node": "^17.0.31",
     "@rollup/plugin-alias": "^3.1.9",
