--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-replace": "^4.0.0",
     "@types/node": "^17.0.31",
-    "phaser": "^3.85.0",
+    "phaser": "^3.86.0",
     "typescript": "^4.6.4",
     "vite": "^5.4.10"
+  },
+  "dependencies": {
+    "phaser3-rex-plugins": "^1.80.10"
   }
 }
